--- a/client/package.json
+++ b/client/package.json
@@ -41,5 +41,10 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "http://localhost:5000"
+    "proxy": {
+        "/api": {
+            "target": "https://localhost:5000",
+            "secure": false
+        }
+    }
 }
