--- a/client/package.json
+++ b/client/package.json
@@ -41,10 +41,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": {
-        "/api": {
-            "target": "https://localhost:5000",
-            "secure": false
-        }
-    }
+    "proxy": "http://localhost:5500"
 }
